--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "skeleton",
   "version": "0.0.0",
   "description": "Basic skeleton repository",
-  "private": false,
+  "private": true,
   "keywords": [
     "skeleton",
     "repository",
